2005-08-14 Pierrick LE GALL

	* modification : simplification of HTML/CSS code for double select
	screen to manage categories properties (admin/cat_options)

2005-08-14 Pierrick LE GALL

	* new : ability to set an element as representant of its category
	directly from picture.php screen.

	* improvement : dedicated icon to add elements into caddie. Ths
	icon is displayed in the category title bar.
	
2005-08-14 Pierrick LE GALL

	* new : maintenance screen in administration. There you can update
	categories informations (number of images, date of the last added
	element), update images informations (path, average rate), purge
	obsolete sessions, purge history.

	* new : ability to have random representative for categories. This
	configuration parameter is set to false by default.

	* new : ability to set an element as representative of a category
	without belonging to the category. Thus, administrator can choose
	representative even for empty categories.

	* improvement : semantically superior design for category edition
	screen by regrouping fields in fieldsets. The improved screen
	contains action buttons as in category list screen.

	* new : ability to move a virtual category (ie change its parent
	category).

	* bug fixed : the sync_users function checks all user children
	tables (access, cache, group association).

2005-08-08 Pierrick LE GALL

	* new : external authentication in another users table. Previous
	users table is divided between users (common properties with any
	web application) and user_infos (phpwebgallery specific
	informations). External table and fields can be configured.
	
	* modification : profile.php is not reachable through
	administration anymore (not useful).

	* modification : in profile.php, current password is mandatory
	only if user tries to change his password. Username can't be
	changed.

	* deletion : of obsolete functions get_user_restrictions,
	update_user_restrictions, get_user_all_restrictions,
	is_user_allowed, update_user
