@@ -17,7 +17,6 @@
 <ul class="menu">
   <li><a class="adminMenu" href="{U_FAQ}">{L_FAQ}</a></li>
   <li><a class="adminMenu" href="{U_SITES}">{L_SITES}</a></li>
-  <li><a class="adminMenu" href="{U_PHPINFO}">{L_PHPINFO}</a></li>
   <li><a class="adminMenu" href="{U_HISTORY}">{L_HISTORY}</a></li>
   <li><a class="adminMenu" href="{U_CAT_UPDATE}">{L_UPDATE}</a></li>
   <li><a class="adminMenu" href="{U_MAINTENANCE}">{lang:Maintenance}</a></li>
